-agregadas las tareas por usuario al dashboard
-falta modificar los metodos de tareacontroller porque se agrego el campo IdUsuario

-falta agregar la opcion de crear/modificar tareas al menú

--- a/Beesiness/Views/Home/Index.cshtml
+++ b/Beesiness/Views/Home/Index.cshtml
@@ -74,6 +74,21 @@
                 </div>
             </section>
 
+            <!--Tareas-->
+            <section class="dashboard-cards">
+                <div id="panel-tareas">
+                    <h2>Tareas Pendientes</h2>
+                    <div id="lista-tareas">
+                        <!-- Aquí se mostrarán las tareas -->
+                    </div>
+                </div>
+                <div id="detalle-tarea">
+                    <h2>Detalle de la Tarea</h2>
+                    <p id="titulo-tarea"></p>
+                    <p id="descripcion-tarea"></p>
+                </div>
+            </section>
+
         </main>
     </div>
 
