-arreglado el tareaedit -agregado un boton para marcar las tareas realizadas en el dashboard -las tareas realizadas son quitadas de la lista de tareas en el dashboard -intento de filtro en tareaindex que no resulto

--- a/Beesiness/Views/Home/Index.cshtml
+++ b/Beesiness/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
     <!-- Custom Styles -->
     @section CustomStyles {
         <link href="/css/index.css" rel="stylesheet" />
+        <link href="/css/tareadash.css" rel="stylesheet" />
     }
 
     <!-- Chart.js -->
@@ -86,6 +87,7 @@
                     <h2>Detalle de la Tarea</h2>
                     <p id="titulo-tarea"></p>
                     <p id="descripcion-tarea"></p>
+                    <button id="boton-tarea"></button>
                 </div>
             </section>
 
@@ -94,7 +96,7 @@
 
     <!-- Custom Scripts -->
     @section Scripts {
-        <script src="/js/dashboard.js"></script>
+        <script src="/js/dashboard.js"></script>        
     }
 </body>
 
